<resources>
    <string name="app_name">Easy Farm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categorias_populares">Categorias populares</string>
    <string name="cancelar">Cancelar</string>
    <string name="busque_pelo_nome_da_loja">Busque pelo nome da Loja</string>
    <string name="pesquise_pela_de_desconto">Pesquise pela % de desconto</string>
    <string name="user">user</string>
    <string name="logoapp">logo</string>
    <string name="me_ajuda">Me Ajuda</string>
    <string name="sair">Sair</string>
    <string name="dados_cadastrais">Dados Cadastrais</string>
    <string name="dados_cliente">Dados Cadastrais</string>
    <string name="apelido">Apelido</string>
    <string name="nomet">Nome</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="cadas">Cadas</string>
    <string name="encerrar_conta">Encerrar conta</string>
    <string name="editar_nome">Editar Nome</string>
    <string name="salvar">Salvar</string>
    <string name="editar_apelido">Editar Apelido</string>
    <string name="editar_email">Editar Email</string>
    <string name="editar_cpf">Editar CPF</string>
    <string name="editar_telefone">Editar Telefone</string>
    <string name="editar_data_de_nascimento">Editar Data de Nascimento</string>
    <string name="melhores_cupons">Melhores Cupons</string>
    <string name="ver_todos">Ver todos</string>
    <string name="tema">Tema</string>
    <string name="categorias">Categorias</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="cupons_v_llidos">Cupons Vállidos</string>
    <string name="home">Home</string>
    <string name="ultimos_cupons">Últimos Cupons</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="cupons_expirados">Cupons Expirados</string>
    <string name="cupons">Cupons</string>
    <string name="dados_do_cliente">Dados do Cliente</string>
    <string name="cpf">CPF</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="data_de_nasc">Data de Nascimento</string>
    <string name="perguntas_frequentes">Perguntas Frequentes</string>
    <string name="todos_os_cupons">Todos os Cupons</string>
    <string name="ltimos_cupons">Últimos Cupons</string>
    <string name="resgatar_c_digo">Resgatar Código</string>
    <string name="cupons_utilizados">Cupons Utilizados</string>
</resources>