<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Tela_DadosCliente">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/verde"
        android:title="@string/toolbar"
        app:titleTextColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dados_do_cliente"
        android:fontFamily="@font/mulishdois"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textColor="@color/white">
    </TextView>

    <ImageView
        android:id="@+id/back_dados"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@color/verde"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_width="115px"
        android:layout_height="115px"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="975dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_cli"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                app:cardElevation="25dp"
                app:cardCornerRadius="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                app:cardBackgroundColor="@color/verde">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Olá Seja Bem-Vindo ao Dados Cadastrais da sua conta :)"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:padding="25dp"
                    android:fontFamily="@font/mulishdois"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cpf_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="225dp"
                android:fontFamily="@font/mulishdois"
                android:padding="25dp"
                android:text="C̶P̶F̶"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="75px"
                android:layout_height="75px"
                android:layout_marginStart="365dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

            <View
                android:id="@+id/linha2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/verde"
                android:layout_below="@id/cpf_dados" />

            <TextView
                android:id="@+id/nome_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linha2"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulishdois"
                android:padding="25dp"
                android:text="@string/nome"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="75px"
                android:layout_height="75px"
                android:layout_below="@+id/linha2"
                android:layout_marginStart="365dp"
                android:layout_marginTop="40dp"
                android:background="@color/verde"
                android:src="@drawable/ic_baseline_arrow_forward_24" />

            <View
                android:id="@+id/linha3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/verde"
                android:layout_below="@id/nome_dados" />

            <TextView
                android:id="@+id/sobrenome_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linha3"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulishdois"
                android:padding="25dp"
                android:text="@string/sobrenome"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="75px"
                android:layout_height="75px"
                android:layout_below="@+id/linha3"
                android:layout_marginStart="365dp"
                android:layout_marginTop="40dp"
                android:background="@color/verde"
                android:src="@drawable/ic_baseline_arrow_forward_24" />

            <View
                android:id="@+id/linha4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/sobrenome_dados"
                android:background="@color/verde" />

            <TextView
                android:id="@+id/fone_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linha4"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulishdois"
                android:padding="25dp"
                android:text="@string/telefone"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="75px"
                android:layout_height="75px"
                android:layout_below="@+id/linha4"
                android:layout_marginStart="365dp"
                android:layout_marginTop="40dp"
                android:background="@color/verde"
                android:src="@drawable/ic_baseline_arrow_forward_24" />

            <View
                android:id="@+id/linha5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/fone_dados"
                android:background="@color/verde" />

            <TextView
                android:id="@+id/email_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linha5"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulishdois"
                android:padding="25dp"
                android:text="E̶m̶a̶i̶l̶"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <View
                android:id="@+id/linha6"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/email_dados"
                android:background="@color/verde" />

            <TextView
                android:id="@+id/senha_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linha6"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulishdois"
                android:padding="25dp"
                android:text="@string/senha"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_below="@+id/linha6"
                android:layout_width="75px"
                android:layout_height="75px"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_baseline_arrow_forward_24"
                android:background="@color/verde"
                android:layout_marginStart="365dp"/>

            <View
                android:id="@+id/linha7"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/verde"
                android:layout_below="@id/senha_dados"/>

            <TextView
                android:id="@+id/nasc_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linha7"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulishdois"
                android:padding="25dp"
                android:text="D̶a̶t̶a̶ ̶d̶e̶ ̶N̶a̶s̶c̶i̶m̶e̶n̶t̶o̶"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <View
                android:id="@+id/linha8"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/verde"
                android:layout_below="@id/nasc_dados"/>

            <TextView
                android:id="@+id/encerrar_conta"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/encerrar_conta"
                android:fontFamily="@font/mulishdois"
                android:textSize="20sp"
                android:layout_marginStart="245dp"
                android:textStyle="bold"
                android:layout_below="@+id/nasc_dados">
            </TextView>
        </RelativeLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_toolbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>